--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -41,7 +41,7 @@ jobs:
       - name: Devcontainer Metadata Summary
         run: |
           echo "" > $GITHUB_STEP_SUMMARY
-          echo "# 🪄 lc39: Devcontainer Build ✨" >> $GITHUB_STEP_SUMMARY
+          echo "# 🪄 LC39: Devcontainer Build ✨" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "**✅ Build Complete!**" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
@@ -49,7 +49,7 @@ jobs:
           echo "| --- | --- |" >> $GITHUB_STEP_SUMMARY
           echo "| 🏷️ **Image SHA** | \`${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.sha }}\` |" >> $GITHUB_STEP_SUMMARY
           echo "| 🆕 **Image Latest** | \`${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest\` |" >> $GITHUB_STEP_SUMMARY
-          echo "| 📦 **GHCR Link** | [View on GHCR](https://github.com/griggst-gainwell/lc39/pkgs/container/hermes-v1) |" >> $GITHUB_STEP_SUMMARY
+          echo "| 📦 **GHCR Link** | [View on GHCR](https://github.com/griggst-gainwell/LC39/pkgs/container/hermes-v1) |" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "---" >> $GITHUB_STEP_SUMMARY
           echo "### 📝 Usage Example" >> $GITHUB_STEP_SUMMARY
